first commit with the skeleton without the backend

--- a/src/pages/purchase-order/purchase-order.html
+++ b/src/pages/purchase-order/purchase-order.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the HomePage page.
+  Generated template for the PurchaseOrderPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>{{'home-title' | translate}}</ion-title>
+        <ion-title>{{ 'purchase-order-title'| translate }}</ion-title>
         <ion-buttons right>
             <button ion-button icon-only menuToggle>
                   <ion-icon name='menu'></ion-icon>
