--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,13 +18,11 @@
                         </ion-item>
                         <ion-item>
                             <ion-icon name="person" item-left></ion-icon>
-                            <ion-label floating>{{'username' | translate }}:</ion-label>
-                            <ion-input formControlName="email" type="text"></ion-input>
+                            <ion-input formControlName="email" type="text" placeholder="{{'username' | translate }}"></ion-input>
                         </ion-item>
                         <ion-item>
                             <ion-icon name="key" item-left></ion-icon>
-                            <ion-label floating>{{'password' | translate }}:</ion-label>
-                            <ion-input formControlName="password" type="password"></ion-input>
+                            <ion-input formControlName="password" type="password" placeholder="{{'password' | translate }}"></ion-input>
                         </ion-item>
                     </ion-list>
                     <div padding>
